<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- General Text -->
    <string name="app_name">ODDEssay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="todo">TO-DO!</string>
    
    <!-- For Navigation Drawer Listing; used in BaseActivity -->
    <string-array name="drawer_array">
        <item>Home</item>
        <item>Gallery</item>
        <item>Calendar</item>
        <item>Map</item>
    </string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--  Activity Titles -->
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_calender">CalenderActivity</string>
    
    <!-- Home Activity 'activity_main.xml' strings -->
    <string name="oddessay_image">ODDEssay Image</string>
    <string name="this_is_home">This is Home</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Device Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="heading">Heading</string>
    <string name="btCaptureImage">Capture Image</string>
    <string name="device_orientation">Device Orientation</string>
    <string name="x_axis">X axis</string>
    <string name="y_axis">Y axis</string>
    <string name="z_axis">Z axis</string>
    
    <!-- Gallery Activity 'activity_gallery.xml' strings -->
    <string name="button_getImage">Get Image</string>
    <string name="imageName">Image Name</string>
    <string name="timeStamp">Time Stamp</string>
    
    <!-- Map Activity 'activity_map.xml' strings -->
    <string name="map_nextfeature">This feature will appear in the next release!</string>

</resources>
