<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.proto.GalleryActivity" >

    <ImageView
        android:id="@+id/imageViewG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxHeight="400dp"
        android:src="@drawable/ic_oddessay" />

    <Button
        android:id="@+id/btn_pick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/button_getImage" />
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
    	android:layout_gravity="center_horizontal">
    	
    	<TableRow
    	    android:id="@+id/trImageName"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:gravity="center" >

    	    <TextView
    	        android:id="@+id/labelImageName"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_margin="10dp"
    	        android:text="@string/imageName"
    	        android:textStyle="bold" />

    	    <TextView
    	        android:id="@+id/tvImageName"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_margin="10dp"
    	        android:text="@string/todo"
    	        android:textStyle="bold" />
    	</TableRow>
<TableRow
        android:id="@+id/trDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/labelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/todo"
            android:textStyle="bold" />
    </TableRow>

        <TableRow
            android:id="@+id/trTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

        <TextView
            android:id="@+id/labelTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/timeStamp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/todo"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/trLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/labelLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/location"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/trLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/labelLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/longitude"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/todo"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/trLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/labelLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/latitude"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/todo"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/trAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/labelAltitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/device_orientation"
            android:textStyle="bold" />

     
    </TableRow>

    <TableRow
        android:id="@+id/trX_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/LabelX_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/x_axis"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvX_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/todo"
            android:textStyle="bold" />
    </TableRow>
    
     <TableRow
        android:id="@+id/trY_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/LabelY_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/y_axis"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvY_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/todo"
            android:textStyle="bold" />
    </TableRow>
    
     <TableRow
        android:id="@+id/trZ_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/LabelZ_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/z_axis"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvZ_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/todo"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>
     
</LinearLayout>
</ScrollView>